--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
                     <remoteConfig>
                         <startServersBeforeTests>true</startServersBeforeTests>
                         <stopServersAfterTests>true</stopServersAfterTests>
-                        <serverList>10.1.0.44,10.1.0.47,10.1.0.46</serverList>
+                        <serverList>${jenkinsSlaveNodes}</serverList>
                     </remoteConfig>
                     <!--propertiesJMeter>
                         <remote_hosts>${host}</remote_hosts>
