--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -11,7 +11,7 @@ spec:
         - cat
       tty: true
     - name: helm
-      image: helm:alpine
+      image: alpine/helm:latest
       command:
           - cat
       tty: true
