--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   labels:
-    some-label: some-label-value
+    jmeter-label: jmeter-master
+    jenkins-label: jenkins-slave
 spec:
   containers:
     - name: maven
