setting service account name to default

--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  namespace: default
   labels:
     jmeter-label: jmeter-master
     jenkins-label: jenkins-slave
 spec:
+  serviceAccountName: default
   containers:
     - name: maven
       image: maven:alpine
