--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -5,6 +5,7 @@ metadata:
     jmeter-label: jmeter-master
     jenkins-label: jenkins-slave
 spec:
+  serviceAccountName: jenkins-release
   containers:
     - name: maven
       image: maven:alpine
