Add jenkins server eks-admin

--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -5,7 +5,7 @@ metadata:
     jmeter-label: jmeter-master
     jenkins-label: jenkins-slave
 spec:
-  serviceAccountName: jenkins-release
+  serviceAccountName: eks-admin
   containers:
     - name: maven
       image: maven:alpine
