--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -12,9 +12,9 @@ spec:
       command:
         - cat
       tty: true
-    #      volumeMounts:
-    #        - mountPath: /root/.m2
-    #          name: m2-volume
+      volumeMounts:
+        - mountPath: /root/.m2
+          name: m2-volume
     - name: kubehelm
       image: dtzar/helm-kubectl:2.14.3
       command:
@@ -25,7 +25,7 @@ spec:
 #          name: kube-volume
 #        - mountPath: /root/.helm
 #          name: helm-volume
-#  volumes:
+  volumes:
 #    - name: kube-volume
 #      hostPath:
 #            # directory location on host
@@ -38,9 +38,6 @@ spec:
 #            path: /Users/asankav/.helm
 #            # this field is optional
 #            type: Directory
-#    - name: m2-volume
-#      hostPath:
-#        # directory location on host
-#        path: /Users/asankav/.m2
-#        # this field is optional
-#        type: Directory
+    - name: m2-volume
+      persistentVolumeClaim:
+        claimName: maven-pv-claim
