Change storage to hostpath

--- a/Jenkins-Slave-Pod.yaml
+++ b/Jenkins-Slave-Pod.yaml
@@ -37,8 +37,8 @@ spec:
       volumeMounts:
 #        - mountPath: /root/.kube
 #          name: kube-volume
-        - mountPath: /root/.helm
-          name: helm-volume
+#        - mountPath: /root/.helm
+#          name: helm-volume
   volumes:
 #    - name: kube-volume
 #      hostPath:
@@ -54,7 +54,7 @@ spec:
 #            type: Directory
     - name: m2-volume
       persistentVolumeClaim:
-        claimName: maven-pv-claim
-    - name: helm-volume
-      persistentVolumeClaim:
-        claimName: helm-pv-claim
+        claimName: maven-pv-claim1
+#    - name: helm-volume
+#      persistentVolumeClaim:
+#        claimName: helm-pv-claim
